--- a/cloudformation/template.yaml
+++ b/cloudformation/template.yaml
@@ -1,8 +1,7 @@
----
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: 'AWS::Serverless-2016-10-31'
 
-Description: My Dev Portal Stack
+Description: Vistry Discrn Dev Portal Stack
 Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
